# john-ros

./: .gitignore  firstinstallpi.sh
anttweakbar_library/: CMakeLists.txt  package.xml
camera_throttle_sync/: CMakeLists.txt  package.xml
camera_throttle_sync/src/: camera_throttle_sync_node.cpp
corvus_description/: CMakeLists.txt  package.xml
corvus_description/launch/: corvus_rviz.launch  corvus_vive.launch  kuka_rviz.launch  kuka_vive.launch
corvus_description/meshes/: corvus_link_0.STL  corvus_link_1.STL  corvus_link_2.STL  corvus_link_3.STL  corvus_link_4.STL  corvus_link_5.STL  corvus_link_6.STL  corvus_link_6.dae  servo_gripper_base.STL  servo_gripper_base.dae  servo_gripper_connector.STL  servo_gripper_connector.dae  servo_gripper_tooth.STL  servo_gripper_tooth.dae  syringe_driver_base.STL  syringe_driver_head.STL
corvus_description/rviz/: corvus.rviz
corvus_description/urdf/: corvus.urdf.xacro
corvus_ik/: CMakeLists.txt  package.xml
corvus_ik/include/corvus_ik/: corvus_point.h
corvus_ik/src/: corvus_ik_node.cpp  corvus_point.cpp
cv_barcode/: CMakeLists.txt  package.xml
cv_barcode/config/: endo.yaml  lifecam_left.yaml  lifecam_right.yaml  pseye.yaml  zbook_webcam.yaml
cv_barcode/launch/: cv_barcode.launch  cv_calibrate.launch
cv_barcode/rviz/: cv_barcode.rviz
cv_barcode/scripts/: make_qr_sim.sh
cv_barcode/scripts/RonnyLM/: model.config  model.sdf
cv_barcode/scripts/RonnyLM/materials/scripts/: RonnyLM.material
cv_barcode/src/: cv_barcode_node.cpp  cv_rotate.cpp  ronny_qrdocking.cpp
fitzroy_description/: CMakeLists.txt  package.xml
fitzroy_description/config/: camerav2_1920x1080.yaml  ost.yaml  raspi_node.yaml
fitzroy_description/launch/: fitzroy_calibrate.launch  fitzroy_gazebo.launch  fitzroy_rviz.launch
fitzroy_description/meshes/: picam.dae
fitzroy_description/rviz/: corvus.rviz  fitzroy.rviz
fitzroy_description/urdf/: fitzroy.urdf.xacro  fitzroy_common.urdf.xacro  picam.urdf.xacro  ultrasonic_sensor.urdf.xacro
fitzroy_driver/: CMakeLists.txt  package.xml  steering_mapping.ods
fitzroy_driver/launch/: fitzroy_hardware.launch  fitzroy_playback.launch  fitzroy_teleop.launch  test_codes.launch
fitzroy_driver/src/: fitzroy_driver_node.cpp
fitzroy_gazebo/: CMakeLists.txt  package.xml
fitzroy_gazebo/config/: joint_controllers.yaml
fitzroy_gazebo/launch/: fitzroy_perception.launch  fitzroy_simulation.launch
fitzroy_gazebo/models/FitzB01/: model.config  model.sdf
fitzroy_gazebo/models/FitzB01/materials/scripts/: FitzB01.material
fitzroy_gazebo/models/FitzB02/: model.config  model.sdf
fitzroy_gazebo/models/FitzB02/materials/scripts/: FitzB02.material
fitzroy_gazebo/models/FitzB03/: model.config  model.sdf
fitzroy_gazebo/models/FitzB03/materials/scripts/: FitzB03.material
fitzroy_gazebo/models/FitzB04/: model.config  model.sdf
fitzroy_gazebo/models/FitzB04/materials/scripts/: FitzB04.material
fitzroy_gazebo/models/FitzB05/: model.config  model.sdf
fitzroy_gazebo/models/FitzB05/materials/scripts/: FitzB05.material
fitzroy_gazebo/models/FitzB06/: model.config  model.sdf
fitzroy_gazebo/models/FitzB06/materials/scripts/: FitzB06.material
fitzroy_gazebo/models/FitzB07/: model.config  model.sdf
fitzroy_gazebo/models/FitzB07/materials/scripts/: FitzB07.material
fitzroy_gazebo/models/FitzB08/: model.config  model.sdf
fitzroy_gazebo/models/FitzB08/materials/scripts/: FitzB08.material
fitzroy_gazebo/models/FitzB09/: model.config  model.sdf
fitzroy_gazebo/models/FitzB09/materials/scripts/: FitzB09.material
fitzroy_gazebo/rviz/: simulation.rviz
fitzroy_gazebo/src/: fitzroy_gazebo_controller.cpp
fitzroy_gazebo/worlds/: qr.world
kinect/: package.xml
kinect/launch/: calibrate.launch  kinect.launch
kinect/rviz/: kinect.rviz
opengl_test/: CMakeLists.txt  package.xml
opengl_test/Common/: ogldev_basic_lighting.cpp
opengl_test/Common/Shaders/: basic_lighting.vs  basic_lighting_rgb.fs  basic_lighting_rgb.vs
opengl_test/Content/: phoenix.pcx
opengl_test/Include/: ogldev_basic_lighting.h
opengl_test/src/: mesh.cpp  mesh.h  opengl_test_node.cpp
opengl_test/src/shared/: texture.cpp  texture.h
raspicam_stills/: CMakeLists.txt  README.md  package.xml
raspicam_stills/src/: raspicam_stills_node.cpp
slam_ekf_2d/: CMakeLists.txt  package.xml
slam_ekf_2d/src/: slam_ekf_2d_node.cpp  slam_ekf_2d_noyaw.cpp
stephens_bug_algorithms/: CMakeLists.txt  README.md  package.xml  willow-erratic.world
stephens_bug_algorithms/launch/: bug1.launch  bug2.launch
stephens_bug_algorithms/src/: bug_nav.cpp  stage_mover.cpp
vr_tests/: CMakeLists.txt  package.xml
vr_tests/launch/: r2d2_demo.launch
